test/fail/integration/_fail_grammar_expr_mod_2.hs
x :: Int
x = 4 mod jl
main = print "hello"